--- a/bird-nest/src/app/globals.css
+++ b/bird-nest/src/app/globals.css
@@ -10,7 +10,7 @@
     min-width: 360px;
   }
   .w-min-menu {
-    min-width: 60px;
+    min-width: 80px;
   }
   .w-min-card {
     min-width: 300px;
@@ -40,4 +40,8 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+nav {
+  list-style: none;
 }
